# EXPANDED_CSC

./: .gitignore  FAULT_LOCALIZATION_EXPERIMENT_KIT_GUIDE.html  README.md  USAGE_GUIDE.html  aggregate_fault_localization_experiment_rows.py  analyze_budget_matched_fl.py  analyze_fl_poor_rank_tasks.py  build_ex_csc_dataset_pooled_tables.py  build_rq2_fingerprint_validation.py  build_rq3_paper_tables_dataset.py  csc_tool.py  evaluate_fault_localization.py  failure_localization_aggregate_tool.py  failure_localization_tool.py  folded_composite_budget_compare_sfl.py  folded_composite_multi_sfl_budget_compare.py  pyproject.toml  refined_tbfv_tool.py  replay_fault_localization_folded.py  replay_fault_localization_strategy.py  rq2_parallel_experiment.py  run_fault_localization_experiment.py  run_parallel_generation_experiment.py  run_subject_experiment.py  summarize_fault_localization_results.py  summarize_parallel_generation_experiment.py  unified_folded_budget_compare_sfl.py  validate_fault_localization_dataset.py
baseline/: run_sfl_baseline_experiment.py
csc_engine/: __init__.py  cct.py  csc.py  execution_trace.py  failure_localization.py  failure_localization_aggregate.py  failure_localization_dataset.py  failure_localization_eval.py  failure_localization_fold.py  failure_localization_summary.py  java_exec.py  parallel_generation_experiment.py  refined_tbfv.py  subject_experiment.py  z3_helpers.py
csc_experiments/: __init__.py  parallel_generation.py  rq2_parallel.py
dataset/: FSF_Generation_Guide.md  Readme.md
examples/: basic_usage.py  example_cct.dot
(+1038 files in other folders)
